; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msxml3/extr_mxnamespace.c_free_ns_context.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msxml3/extr_mxnamespace.c_free_ns_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nscontext = type { i32, %struct.nscontext*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nscontext*)* @free_ns_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_ns_context(%struct.nscontext* %0) #0 {
  %2 = alloca %struct.nscontext*, align 8
  %3 = alloca i32, align 4
  store %struct.nscontext* %0, %struct.nscontext** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %29, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.nscontext*, %struct.nscontext** %2, align 8
  %7 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %32

10:                                               ; preds = %4
  %11 = load %struct.nscontext*, %struct.nscontext** %2, align 8
  %12 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %11, i32 0, i32 1
  %13 = load %struct.nscontext*, %struct.nscontext** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %13, i64 %15
  %17 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @SysFreeString(i32 %18)
  %20 = load %struct.nscontext*, %struct.nscontext** %2, align 8
  %21 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %20, i32 0, i32 1
  %22 = load %struct.nscontext*, %struct.nscontext** %21, align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %22, i64 %24
  %26 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @SysFreeString(i32 %27)
  br label %29

29:                                               ; preds = %10
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %4

32:                                               ; preds = %4
  %33 = load %struct.nscontext*, %struct.nscontext** %2, align 8
  %34 = getelementptr inbounds %struct.nscontext, %struct.nscontext* %33, i32 0, i32 1
  %35 = load %struct.nscontext*, %struct.nscontext** %34, align 8
  %36 = call i32 @heap_free(%struct.nscontext* %35)
  %37 = load %struct.nscontext*, %struct.nscontext** %2, align 8
  %38 = call i32 @heap_free(%struct.nscontext* %37)
  ret void
}

declare dso_local i32 @SysFreeString(i32) #1

declare dso_local i32 @heap_free(%struct.nscontext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
